--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "fastapi>=0.129.0",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
+    "ruff>=0.15.1",
     "uvicorn>=0.40.0",
 ]
 
@@ -17,7 +18,32 @@ dev = [
     "ruff>=0.15.0",
 ]
 
+
 [tool.ruff]
 line-length = 120
 target-version = "py313"
 src = ["src"]
+
+
+[tool.ruff.lint]
+fixable = ["I"]  # fix only `isort`
+select = ["ALL"]
+ignore = [
+    "D100", # Missing docstring in public module
+    "D101", # Missing docstring in public class
+    "D102", # Missing docstring in public method
+    "D103", # Missing docstring in public function
+    "D104", # Missing docstring in public package
+    "D105", # Missing docstring in magic method
+    "D107", # Missing docstring in `__init__`
+    "D203", # One blank line before class (ignored by D211)
+    "D212", # Multi line summary first line (ignored by D213)
+    "G004", # Logging statement uses f-string
+    "COM812", # Missing trailing comma (skip it because it conflicts with `ruff format`)
+    "TD002", # Missing T0D0 author
+    "TD003", # Missing T0D0 link
+]
+
+
+[tool.mypy]
+strict = true
