--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ ignore = [
     "COM812", # Missing trailing comma (skip it because it conflicts with `ruff format`)
     "TD002", # Missing T0D0 author
     "TD003", # Missing T0D0 link
+    "FIX002", #  Line contains T0D0, consider resolving the issue
 ]
 
 
